--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -8,10 +8,9 @@
 
 </head>
 <body>
-	<div class="container text-center"
-		style="margin-top: 100px; color: white">
-		<div style="margin-bottom: 49px;">
-			<h1 style="margin-bottom: 49px;font-size: 40px">Welcom to my Web</h1>
+	<div class="container text-center">
+		<div>
+			<h1>Welcom to my Web</h1>
 		</div>
 		<div>
 			<h3>
