commit to better

--- a/src/main/resources/templates/takenote.html
+++ b/src/main/resources/templates/takenote.html
@@ -26,8 +26,9 @@
 						<th>Title</th>
 						<th>Content</th>
 						<th>Date</th>
-						<th></th>
-						<th></th>
+						<th>Del</th>
+					    <th>Edit</th>
+						
 					</tr>
 				</thead>
 				<tbody>
@@ -38,7 +39,8 @@
 						<td><a th:href="@{'/deleted/' + ${note.stt}}"
 							class="btn btn-primary" style="background-color:red" onclick="return confirm('Are you sure?');">Del Notes</a>
 					    </td>
-					    <td><a th:href="@{/takenote}" class="btn btn-primary">AddNote</a></td>
+					    <td><a th:href="@{'/edit/' + ${note.stt}}"class="btn btn-primary" >Edit</a></td>
+					    
 					</tr>
 				</tbody>
 			</table>
